2007-03-25  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (bacon_video_widget_init),
	(bacon_video_widget_can_play), (bacon_video_widget_get_mrls),
	(bacon_video_widget_set_subtitle_font):
	Save some memory in the object struct, add support for DVB playback,
	including getting MRLs, fix build warning

	* src/backend/bacon-video-widget.h: add "special" MEDIA_TYPE_DVB

	* src/plparse/totem-disc.h: add MEDIA_TYPE_NUM_TYPES

	* src/totem-playlist.c: (totem_playlist_create_full_path),
	(totem_playlist_init), (totem_playlist_add_one_mrl):
	* src/totem-uri.c: (totem_is_special_mrl):
	* src/totem-uri.h:
	* src/totem.c: (totem_action_open_files_list),
	(totem_action_remote): totem_is_media cleanup, add totem_is_special_mrl
	for DVB mrls, use less RAM when adding new items to the playlist (unneeded
	duplication of strings), add basic DVB support ("totem dvb:" will do)

2007-03-24  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-qt.c:
	(totem_pl_parser_add_quicktime_metalink),
	(totem_pl_parser_is_quicktime):
	Add support for parsing SMILtext hacks (Closes: #402278)

	* src/plparse/totem-pl-parser-smil.c: (parse_smil_video_entry),
	(parse_smil_entry), (parse_smil_head), (parse_smil_entries),
	(totem_pl_parser_add_smil_with_doc), (totem_pl_parser_add_smil),
	(totem_pl_parser_add_smil_with_data):
	* src/plparse/totem-pl-parser-smil.h:
	Allow to parse SMIL files using data, use xine-lib's parser instead
	of libxml2 (Closes: #407138), Fix return values of a bunch of functions

	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entries):
	Remove unneeded casts

2007-03-22  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_subtitle_font): Disable
	setting the font name, as Freetype isn't enabled by
	default in xine-lib

2007-03-21  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-missing-plugins.c:
	(on_plugin_installation_done):